@@ -1,4 +1,8 @@
 
+2009-08-24
+
+   * [FEATURE] Tabulation view cannot remove all completely empty rows and columns
+
 2009-07-01
 
    * [FEATURE] GraphML Export
